AC_INIT(tuxbox-apps-dvb-dvbsnoop,0.0.1,,dvbsnoop)
AM_INIT_AUTOMAKE(dvbsnoop,0.0.1)

TUXBOX_APPS

AC_PROG_CC
AC_PROG_RANLIB

TUXBOX_APPS_DVB

AC_OUTPUT([
Makefile
src/Makefile
src/datacarousel/Makefile
src/descriptors/Makefile
src/dvb_api/Makefile
src/pes/Makefile
src/sections/Makefile
src/ts/Makefile
src/testdata/Makefile
src/strings/Makefile
src/misc/Makefile
])

