AC_INIT(tuxbox-apps-dvb-tools,0.0.1,,dvb-tools)
AM_INIT_AUTOMAKE(dvb-zapit,0.0.1)

TUXBOX_APPS
TUXBOX_APPS_DIRECTORY
TUXBOX_BOXTYPE

AC_PROG_CC

AC_PROG_CXX

TUXBOX_APPS_DVB
TUXBOX_APPS_DRIVER

TUXBOX_APPS_LIB_PKGCONFIG(MPEGTOOLS,tuxbox-mpegtools)

AC_OUTPUT([
Makefile
dvb_test/Makefile
dvbnetctrl/Makefile
skyscan/Makefile
stream/Makefile
])

