AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	libconfigfile \
	libcramfs \
	libeventserver \
	libmd5sum \
	libmpegtools \
	libnet \
	libucodes

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = \
	tuxbox-configfile.pc \
	tuxbox-cramfs.pc \
	tuxbox-eventserver.pc \
	tuxbox-md5sum.pc \
	tuxbox-mpegtools.pc \
	tuxbox-net.pc \
	tuxbox-ucodes.pc

