AC_INIT(tuxbox-apps-misc-tools,0.0.1,,tuxbox-misc-tools)
AM_INIT_AUTOMAKE(tuxbox-misc-tools,0.0.1)

TUXBOX_APPS

AC_PROG_CC
AM_PROG_LIBTOOL

/*
AC_CHECK_HEADER([mtd/mtd-user.h],
    [new_mtd=true],
    [new_mtd=false],
    [#include <linux/compiler.h>]
)

AM_CONDITIONAL(NEW_MTD, 
    test x$new_mtd = xtrue )
*/

AC_OUTPUT([
Makefile
etherwake/Makefile
fbshot/Makefile
mtd/Makefile
])

